CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(CoffeeBean, VERSION 0.0.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

FILE(GLOB_RECURSE SOURCES src/*.cc)
FILE(GLOB_RECURSE HEADERS include/*.h)

FIND_PACKAGE(OpenSSL REQUIRED)

ADD_EXECUTABLE(coffebean ${HEADERS} ${SOURCES} test.cc)
TARGET_LINK_LIBRARIES(coffebean OpenSSL::SSL)
